# VisualisationScientifique

./: .gitignore  .nfs0000000076dd806a00003bdd  .nfs0000000076dd806e00003bde  CMakeLists.txt  README.md  launch.sh
cmake/: FindOptiX.cmake
common/: CUDABuffer.h  LaunchParams.h  Scene.cpp  Scene.hpp  camera.h  image.cpp  image.h  main.cpp  meshloader.cpp  meshloader.h  mmatrix.cpp  mmatrix.h  optix7.h  optixRender.cpp  optixRender.h  screenDisplay.cpp  screenDisplay.h  trianglemesh.cpp  trianglemesh.h  vec.h  volume.cpp  volume.h
libs/assimp/lib64/cmake/assimp-5.3/: assimpTargets-noconfig.cmake  assimpTargets.cmake
libs/assimp/lib64/pkgconfig/: assimp.pc
samples/: CMakeLists.txt
samples/1_meshVisualization/: CMakeLists.txt  main.cpp  optixRender.cpp  optixRender.h
samples/2_volumeVisualization/: CMakeLists.txt  main.cpp  optixRender.cpp  optixRender.h
shader/: mesh.cu  raygen.cu  volume.cu
