# ------------------------------------------------------------------
# build mesh visualization application
# ------------------------------------------------------------------
add_subdirectory(./1_meshVisualization)
# ------------------------------------------------------------------
# build volume visualization application
# ------------------------------------------------------------------
add_subdirectory(./2_volumeVisualization)
